--- a/css/styles.css
+++ b/css/styles.css
@@ -72,8 +72,11 @@ p {
 
 /* Title Section */
 
-#title .container-fluid {
+#title {
   text-align: left;
+}
+
+#title .container-fluid {
   padding: 3% 15% 7%;
 }
 /* Title image */
